force-app/main/default/objects/Evenement__c/Evenement__c.object-meta.xml
<CustomObject>
    <label>Évènement</label>
    <nameField>
        <displayFormat>EVENT - {0000000}</displayFormat>
        <label>Numéro de l&apos;évènement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Évènements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>