force-app/main/default/objects/Evenement__c/fields/ASS_EXTId_OCOM__c.field-meta.xml
<CustomField>
    <fullName>ASS_EXTId_OCOM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Meter (Id externe)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>