force-app/main/default/objects/Evenement__c/fields/Date_BO__c.field-meta.xml
<CustomField>
    <fullName>Date_BO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date BO</label>
    <type>DateTime</type>
</CustomField>