force-app/main/default/objects/Evenement__c/fields/Date_Meter__c.field-meta.xml
<CustomField>
    <fullName>Date_Meter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Meter</label>
    <type>DateTime</type>
</CustomField>