force-app/main/default/objects/Evenement__c/fields/Etat__c.field-meta.xml
<CustomField>
    <fullName>Etat__c</fullName>
    <label>État</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TV_ON</fullName>
            </value>
            <value>
                <fullName>TV_OFF</fullName>
            </value>
            <value>
                <fullName>TV_OFF_CONFIRMED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>