force-app/main/default/objects/Evenement__c/fields/Meter__c.field-meta.xml
<CustomField>
    <fullName>Meter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meter</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Évènements</relationshipLabel>
    <relationshipName>Evenements</relationshipName>
    <type>Lookup</type>
</CustomField>