force-app/main/default/objects/Evenement__c/fields/Sequence_Id__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Sequence Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>