force-app/main/default/objects/Evenement__c/fields/Type_Sous_Type__c.field-meta.xml
<CustomField>
    <fullName>Type_Sous_Type__c</fullName>
    <label>Type/Sous-Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MES_DMD / TVONOFF</fullName>
            </value>
            <value>
                <fullName>MES_DMD / TV_STATE4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>