force-app/main/default/objects/Evenement__c/listViews/RDV_FIXE.listView-meta.xml
<ListView>
    <fullName>RDV_FIXE</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_BO__c</field>
        <operation>equals</operation>
        <value>5/20/2023 12:00 AM</value>
    </filters>
    <label>RDV FIXE</label>
</ListView>