force-app/main/default/objects/Evenement__c/listViews/TVOn_TVOff_du_Jour.listView-meta.xml
<ListView>
    <fullName>TVOn_TVOff_du_Jour</fullName>
    <columns>NAME</columns>
    <columns>Meter__c</columns>
    <columns>Etat__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>TVOn/TVOff du Jour</label>
    <sharedTo>
        <group>Acces_Pending_Synchro</group>
    </sharedTo>
</ListView>